@startuml
'https://plantuml.com/class-diagram
skinparam classAttributeIconSize 0
skinparam CircledCharacterFontSize 0
skinparam CircledCharacterRadius 0

interface Command
class Ui
class TransactionList
class RevenueCommand
class Parser
class Item

RevenueCommand <.. Parser
Command <|. RevenueCommand
Ui <.. RevenueCommand
TransactionList <.. RevenueCommand
Item <.. RevenueCommand

interface Command <<interface>> {
    +execute():void
    +isQuit():boolean
}

class RevenueCommand {
    -startDate:LocalDate
    -endDate:LocalDate
    -task:String
    -expenditure:BigDecimal
    +RevenueCommand()
    +execute():void
    +isQuit():boolean
}

class Ui {
    {static}+printRevenueExpenditure():void
}

class Parser {
    {static}-parseRevenueCommand(input:String):RevenueCommand
}

class TransactionList {
    {static}+calculateDay():BigDecimal
    {static}+calculateTotal():BigDecimal
    {static}+calculateRange():BigDecimal
    {static}+getFilteredTransactionList():ArrayList<Transaction>
}

class Item {
    {static}-sortByDate():Comparator<Item>
}

note "Some parameters and methods \nomitted for brevity" as n1
@enduml

@startuml
hide footbox
participant "SuperTracker" as SuperTracker <<class>> #f5e3a9
participant ":RevenueCommand" as RevenueCommand #cbf7f4
participant "TransactionList" as TransactionList <<class>> #d5eac2
participant "Ui" as Ui <<class>> #e5c2ea
participant "Collections" as Collections <<class>> #ffcdd6

SuperTracker -> RevenueCommand : execute()
activate RevenueCommand #cbf7f4
alt task is "today"
    RevenueCommand -> TransactionList : calculateDay()
    activate TransactionList #d5eac2
    TransactionList --> RevenueCommand : revenue:BigDecimal
    deactivate TransactionList

else task is "total"
    RevenueCommand -> TransactionList : calculateTotal()
    activate TransactionList #d5eac2
    TransactionList --> RevenueCommand : revenue:BigDecimal
    deactivate TransactionList

else task is "day"
    RevenueCommand -> TransactionList : calculateDay()
    activate TransactionList #d5eac2
    TransactionList --> RevenueCommand : revenue:BigDecimal
    deactivate TransactionList

else task is "range"
    RevenueCommand -> TransactionList : calculateRange()
    activate TransactionList #d5eac2
    TransactionList --> RevenueCommand : revenue:BigDecimal
    deactivate TransactionList
end

note right : some parameters and methods \nomitted for brevity

RevenueCommand -> TransactionList : getFilteredTransactionList()
activate TransactionList #d5eac2
TransactionList --> RevenueCommand : filteredList:ArrayList<Transaction>
deactivate TransactionList

RevenueCommand -> RevenueCommand : sort()
note right : Transactions sorted by date

RevenueCommand -> Collections : reverse(filteredList:ArrayList<Transaction>)
activate Collections #ffcdd6
Collections --> RevenueCommand
deactivate Collections

RevenueCommand -> Ui : printRevenueExpenditure()
activate Ui #e5c2ea
Ui --> RevenueCommand
deactivate Ui

RevenueCommand --> SuperTracker
deactivate RevenueCommand

@enduml